// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render query summary 1`] = `
.c5.c5.c5 {
  margin: 0;
  padding: 0;
  font-family: 'Lato',sans-serif;
  font-size: 14px;
  font-weight: 400;
  color: #4F5B5F;
  line-height: 1.2;
  font-weight: bold;
}

.c8.c8.c8 {
  margin: 0;
  padding: 0;
  font-family: 'Lato',sans-serif;
  font-size: 14px;
  font-weight: 400;
  color: #4F5B5F;
  line-height: 1.2;
}

.c1 {
  margin: 0 0 10px 0;
  padding: 0;
  border-collapse: collapse;
  table-layout: fixed;
  text-align: left;
}

.c4 {
  padding: 0 20px 10px 0;
}

.c7 {
  padding: 0 0 10px 0;
}

.c2 {
  vertical-align: top;
}

.c2:last-child .c3,
.c2:last-child .c6 {
  padding-bottom: 0;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  display: inline-block;
  margin-left: 3px;
  margin-right: 3px;
}

.c0 {
  padding: 20px;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <tbody
        class=""
      >
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            <p
              class="c5"
              color="#4F5B5F"
              font-weight="bold"
            >
              query_summary.analysis
            </p>
          </th>
          <td
            class="c6 c7"
          >
            <p
              class="c8"
              color="#4F5B5F"
            >
              sum
            </p>
          </td>
        </tr>
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            <p
              class="c5"
              color="#4F5B5F"
              font-weight="bold"
            >
              query_summary.event_stream
            </p>
          </th>
          <td
            class="c6 c7"
          >
            <p
              class="c8"
              color="#4F5B5F"
            >
              purchases
            </p>
          </td>
        </tr>
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            <p
              class="c5"
              color="#4F5B5F"
              font-weight="bold"
            >
              query_summary.target_property
            </p>
          </th>
          <td
            class="c6 c7"
          >
            <div
              class="c9"
            >
              <p
                class="c8"
                color="#4F5B5F"
              >
                item
              </p>
              <span
                class="c10"
              >
                <svg
                  height="10"
                  opacity="1"
                  viewBox="0 0 30 30"
                  width="10"
                >
                  <polygon
                    fill="#77A3BB"
                    points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c9"
            >
              <p
                class="c8"
                color="#4F5B5F"
              >
                price
              </p>
            </div>
          </td>
        </tr>
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            <p
              class="c5"
              color="#4F5B5F"
              font-weight="bold"
            >
              query_summary.applied_filters
            </p>
          </th>
          <td
            class="c6 c7"
          >
            <p
              class="c8"
              color="#4F5B5F"
            >
              1
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`should render query summary for funnels 1`] = `
.c5.c5.c5 {
  margin: 0;
  padding: 0;
  font-family: 'Lato',sans-serif;
  font-size: 14px;
  font-weight: 400;
  color: #4F5B5F;
  line-height: 1.2;
  font-weight: bold;
}

.c8.c8.c8 {
  margin: 0;
  padding: 0;
  font-family: 'Lato',sans-serif;
  font-size: 14px;
  font-weight: 400;
  color: #4F5B5F;
  line-height: 1.2;
}

.c14.c14.c14 {
  margin: 0;
  padding: 0;
  font-family: 'Lato',sans-serif;
  font-size: 14px;
  font-weight: 400;
  color: #4F5B5F;
  line-height: 1.2;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c1 {
  margin: 0 0 10px 0;
  padding: 0;
  border-collapse: collapse;
  table-layout: fixed;
  text-align: left;
}

.c4 {
  padding: 0 20px 10px 0;
}

.c7 {
  padding: 0 0 10px 0;
}

.c2 {
  vertical-align: top;
}

.c2:last-child .c3,
.c2:last-child .c6 {
  padding-bottom: 0;
}

.c10 {
  border: 1px solid #EDEDED;
}

.c9 + .c9 {
  border-top: none;
}

.c11 {
  padding: 10px 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-column-gap: 10px;
  column-gap: 10px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
}

.c12 {
  line-height: 1;
}

.c13 {
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0 {
  padding: 20px;
}

<div>
  <div
    class="c0"
  >
    <table
      class="c1"
    >
      <tbody
        class=""
      >
        <tr
          class="c2"
        >
          <th
            class="c3 c4"
          >
            <p
              class="c5"
              color="#4F5B5F"
              font-weight="bold"
            >
              query_summary.analysis
            </p>
          </th>
          <td
            class="c6 c7"
          >
            <p
              class="c8"
              color="#4F5B5F"
            >
              funnel
            </p>
          </td>
        </tr>
      </tbody>
    </table>
    <div
      class="c9 c10"
    >
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <svg
            height="15"
            opacity="1"
            viewBox="0 0 30 30"
            width="15"
          >
            <polygon
              fill="rgba(79,91,95,0.7)"
              points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
            />
          </svg>
        </div>
        <div
          class="c13"
        >
          <p
            class="c5"
            color="#4F5B5F"
            font-weight="bold"
          >
            query_summary.step
             
            1
          </p>
        </div>
        <p
          class="c14"
          color="#4F5B5F"
        >
          signups
        </p>
      </div>
    </div>
    <div
      class="c9 c10"
    >
      <div
        class="c11"
      >
        <div
          class="c12"
        >
          <svg
            height="15"
            opacity="1"
            viewBox="0 0 30 30"
            width="15"
          >
            <polygon
              fill="rgba(79,91,95,0.7)"
              points="9.45351896 0 24.453519 15 9.45351896 30 5.55 26.096481 16.6465765 15 5.55 3.90351896"
            />
          </svg>
        </div>
        <div
          class="c13"
        >
          <p
            class="c5"
            color="#4F5B5F"
            font-weight="bold"
          >
            query_summary.step
             
            2
          </p>
        </div>
        <p
          class="c14"
          color="#4F5B5F"
        >
          purchases
        </p>
      </div>
    </div>
  </div>
</div>
`;
